WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233222
[LFC][IFC] break-word is not considered when calculating min-content intrinsic sizes.
https://bugs.webkit.org/show_bug.cgi?id=233222
Summary
[LFC][IFC] break-word is not considered when calculating min-content intrinsi...
alan
Reported
2021-11-16 16:48:51 PST
https://drafts.csswg.org/css-text/#overflow-wrap-property
Attachments
Patch
(7.49 KB, patch)
2021-11-16 16:50 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.34 KB, patch)
2021-11-17 06:36 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-11-16 16:50:32 PST
Created
attachment 444454
[details]
Patch
Antti Koivisto
Comment 2
2021-11-16 21:28:43 PST
Comment on
attachment 444454
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=444454&action=review
> Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.h:155 > + bool m_isIntrinsicWidthMode { false };
m_isInIntrinsicWidthMode would read better. Or enum class WidthMode : bool { Layout, Intrinsic }; WidthMode m_widthMode;
alan
Comment 3
2021-11-17 06:36:37 PST
Created
attachment 444513
[details]
Patch
EWS
Comment 4
2021-11-17 07:10:59 PST
Committed
r285930
(
244339@main
): <
https://commits.webkit.org/244339@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 444513
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-11-17 07:11:22 PST
<
rdar://problem/85503079
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug