[LFC][IFC] break-word is not considered when calculating min-content intrinsic sizes. https://bugs.webkit.org/show_bug.cgi?id=233222

Reviewed by Antti Koivisto.

See https://drafts.csswg.org/css-text/#overflow-wrap-property

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::InlineContentBreaker):
(WebCore::Layout::InlineContentBreaker::wordBreakBehavior const):
* layout/formattingContexts/inline/InlineContentBreaker.h:
(WebCore::Layout::InlineContentBreaker::isIntrinsicWidthMode const):
* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineContent):
(WebCore::Layout::LineBuilder::initialConstraintsForLine const):
* layout/formattingContexts/inline/InlineLineBuilder.h:
(WebCore::Layout::LineBuilder::isIntrinsicWidthMode const):



Canonical link: https://commits.webkit.org/244339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285930 268f45cc-cd09-0410-ab3c-d52691b4dbfc